input validation added functions added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      <p class="fw-bold me-3">Clothes: <input class="px-2" type="text" id="cloth-cost"></p>
                      <br> 
                      <!-- first button adding    -->
-                     <button id="total-calc" class="mt-1 ms-4 bg-warning rounded px-5 py-2">Calculate</button>
+                     <button onclick="" id="total-calc" class="mt-1 ms-4 bg-warning rounded px-5 py-2">Calculate</button>
                      <!-- total exprience and balance section adding  -->
                      <h5 id="total-expence" class="mt-3">Total Expences: <span>0 Tk</span></h5>
                      <h5 id="total-balance" class="mt-3">Balance: <span>0 Tk</span></h5>
